Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15178

%{CurrentBuild:Type} not expanded for default build directory

    XMLWordPrintable

Details

    • aface7b1d6480a4c3b62a1d06de5e1ee6cd14e1a

    Description

      When the default build directory (in the Build & Run dialog) contains the built-in macro %{CurrentBuild:Type}, this macro fails to expand as the build directory for both debug and release modes.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            Michael.R.Legako@L-3com.com Michael R. Legako
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes